ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: session-affinity
  name: session-affinity
spec:
  rules:
  - host: sess.192.168.64.5.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: session-affinity
          servicePort: 8080
